--- a/client/package.json
+++ b/client/package.json
@@ -3,10 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@rocketseat/unform": "^1.6.1",
+    "axios": "^0.19.0",
+    "history": "^4.10.1",
+    "immer": "^5.0.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "reactotron-react-js": "^3.3.6",
+    "reactotron-redux": "^3.1.2",
+    "reactotron-redux-saga": "^4.2.2",
+    "redux": "^4.0.4",
+    "redux-saga": "^1.1.3",
     "styled-components": "^4.4.1"
   },
   "scripts": {
